--- a/Mappings/Mappings.csproj
+++ b/Mappings/Mappings.csproj
@@ -35,6 +35,7 @@
       <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -44,13 +45,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CategoriaDTO.cs" />
-    <Compile Include="DataTableDTO.cs" />
+    <Compile Include="DTO\CategoriaDTO.cs" />
+    <Compile Include="DTO\DataTableDTO.cs" />
     <Compile Include="MapperDatabase.cs" />
     <Compile Include="MapperDTO.cs" />
-    <Compile Include="ProductoDTO.cs" />
+    <Compile Include="DTO\ProductoDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Select2DTO.cs" />
+    <Compile Include="DTO\Select2DTO.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DataAccess\DataAccess.csproj">
