Agregar autenticación de usuario

--- a/WebApp/Web.config
+++ b/WebApp/Web.config
@@ -19,6 +19,13 @@
     <add name="Entities" connectionString="metadata=res://*/ApplicationDbContext.csdl|res://*/ApplicationDbContext.ssdl|res://*/ApplicationDbContext.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;TNS_ADMIN=C:\Users\Usuario\Oracle\network\admin;USER ID=OFFICEMARKET;PASSWORD=officemarket;DATA SOURCE=localhost:1521/xe;PERSIST SECURITY INFO=True&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.web>
+    
+    <!-- Esto es para la autenticacion de Usuario -->
+    <authentication mode="Forms">
+      <forms loginUrl="/Auth/Login"></forms>
+    </authentication>
+    
+    
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
