Agregar foto producto y generar reportes

--- a/WebApp/Web.config
+++ b/WebApp/Web.config
@@ -9,18 +9,25 @@
     
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    
+    <!-- Ruta para guardar las imagenes de los productos -->
+    <add key="rutaImagenesProductos" value="C:\temp" />
+    
   </appSettings>
+  
   <connectionStrings>
-    <add name="Entities" connectionString="metadata=res://*/ApplicationDbContext.csdl|res://*/ApplicationDbContext.ssdl|res://*/ApplicationDbContext.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;TNS_ADMIN=C:\Users\Usuario\Oracle\network\admin;USER ID=OFFICEMARKET;PASSWORD=officemarket;DATA SOURCE=localhost:1521/xe;PERSIST SECURITY INFO=True&quot;" providerName="System.Data.EntityClient" />
+    <add name="Entities" connectionString="metadata=res://*/ApplicationDbContext.csdl|res://*/ApplicationDbContext.ssdl|res://*/ApplicationDbContext.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;TNS_ADMIN=C:\Users\TuUsuario\Oracle\network\admin;USER ID=OFFICEMARKET;PASSWORD=officemarket;DATA SOURCE=localhost:1521/xe;PERSIST SECURITY INFO=True&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
+  
   <system.web>
     
-    <!-- Esto es para la autenticacion de Usuario -->
+    <!-- Autenticacion de Usuario -->
     <authentication mode="Forms">
       <forms loginUrl="/Auth/Login"></forms>
     </authentication>
