--- a/WebApp/packages.config
+++ b/WebApp/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EPPlus" version="4.5.3.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc.es" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
@@ -10,6 +11,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="Oracle.ManagedDataAccess" version="19.9.0" targetFramework="net472" />
+  <package id="Rotativa" version="1.7.3" targetFramework="net472" />
   <package id="SimpleInjector" version="4.3.0" targetFramework="net472" />
   <package id="SimpleInjector.Integration.Web" version="4.3.0" targetFramework="net472" />
   <package id="SimpleInjector.Integration.Web.Mvc" version="4.3.0" targetFramework="net472" />
