--- a/DataAccess/App.Config
+++ b/DataAccess/App.Config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="Entities" connectionString="metadata=res://*/ApplicationDbContext.csdl|res://*/ApplicationDbContext.ssdl|res://*/ApplicationDbContext.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;TNS_ADMIN=C:\Users\Usuario\Oracle\network\admin;USER ID=OFFICEMARKET;PASSWORD=officemarket;DATA SOURCE=localhost:1521/xe;PERSIST SECURITY INFO=True&quot;" providerName="System.Data.EntityClient" />
+    <add name="Entities" connectionString="metadata=res://*/ApplicationDbContext.csdl|res://*/ApplicationDbContext.ssdl|res://*/ApplicationDbContext.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;TNS_ADMIN=C:\Users\TuUsuario\Oracle\network\admin;USER ID=OFFICEMARKET;PASSWORD=officemarket;DATA SOURCE=localhost:1521/xe;PERSIST SECURITY INFO=True&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
